@@ -1,5 +1,10 @@
 2005-03-24  Tom Tromey  <tromey@redhat.com>
 
+	* tree.cc (visit_array_initializer): Build COMPOUND_EXPRs, not a
+	statement list.  Lay out array class.
+
+2005-03-24  Tom Tromey  <tromey@redhat.com>
+
 	* abi.cc (build_method_call): Strip abstract methods.
 
 2005-03-23  Tom Tromey  <tromey@redhat.com>
